--- a/setup.cfg
+++ b/setup.cfg
@@ -72,8 +72,8 @@ testing =
 # console_scripts =
 #     script_name = toutiao_uploader.module:function
 # For example:
-# console_scripts =
-#     fibonacci = toutiao_uploader.skeleton:run
+console_scripts =
+    toutiao_upload = toutiao_uploader.skeleton:login_command
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
